Bug 107811 - !!br0ken!! in expert configuration of notebookbar
Summary: !!br0ken!! in expert configuration of notebookbar
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
5.4.0.0.alpha1+
Hardware: All All
: high major
Assignee: Julien Nabet
URL:
Whiteboard: target:5.4.0 target:5.3.4
Keywords: haveBacktrace
Depends on:
Blocks:
 
Reported: 2017-05-12 21:21 UTC by Regina Henschel
Modified: 2017-05-19 20:29 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot of configuration dialog (56.44 KB, image/png)
2017-05-12 21:21 UTC, Regina Henschel
Details
Screenshot with Fatal error (34.03 KB, image/png)
2017-05-12 21:51 UTC, m_a_riosv
Details
bt with debug symbols (6.95 KB, text/plain)
2017-05-13 10:04 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2017-05-12 21:21:31 UTC
Created attachment 133282 [details]
Screenshot of configuration dialog

Tools > Options > LibreOffice Advanced > Open Expert Configuration.
Search for 'notebookbar'.
One part of the tree has a !!br0ken!!

I see no specific error, but !!br0ken!! cannot be correct.
Comment 1 m_a_riosv 2017-05-12 21:51:17 UTC
Created attachment 133283 [details]
Screenshot with Fatal error

Trying that LibreOffice crash for me.
Comment 2 m_a_riosv 2017-05-13 01:12:10 UTC
Reproducible with
Version: 5.4.0.0.alpha1
Build ID: 0b9f9bef65bb21ebb6a64aafad448f7f62dc824a
CPU threads: 4; OS: Windows 6.2; UI render: default; 
Locale: es-ES (es_ES); Calc: single

Really not a crash of comment #2, because selecting 'omit' on the error box three times LO goes ahead, so also reproducible with:
Version: 5.4.0.0.alpha1+
Build ID: e5a4858e1adf5e9f0c5eb808d2155fded6a46728
CPU threads: 4; OS: Windows 6.19; UI render: GL; 
TinderBox: Win-x86@39, Branch:master, Time: 2017-05-10_03:50:12
Locale: es-ES (es_ES); Calc: CL
Comment 3 Julien Nabet 2017-05-13 10:03:01 UTC
On pc Debian x86-64 with master sources updated today, I could reproduce this.
The problem is there may be entries with no parent.
Comment 4 Julien Nabet 2017-05-13 10:04:37 UTC
Created attachment 133290 [details]
bt with debug symbols
Comment 5 Julien Nabet 2017-05-13 10:07:02 UTC
Patch submitted here:
https://gerrit.libreoffice.org/#/c/37568/
Comment 6 Julien Nabet 2017-05-13 10:51:45 UTC
patch for 5.3 branch is waiting for review here:
https://gerrit.libreoffice.org/#/c/37570/
Comment 7 Commit Notification 2017-05-13 10:53:27 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8aee79e35208dd263928d7f5daa3f931fd3de99d

tdf#107811: expert config, deal no parent case

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2017-05-19 20:29:28 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "libreoffice-5-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=24201323b6f25f62947d5e788e8444993920472c&h=libreoffice-5-3

tdf#107811: expert config, deal no parent case

It will be available in 5.3.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.