tdf#107811: expert config, deal no parent case

bt part:
3  0x00007ffff73c7ee2 in __GI___assert_fail (assertion=0x7ffff7ba5107 "false", file=0x7ffff7ba4ef8 "/home/julien/lo/libreoffice/sal/rtl/strtmpl.cxx", line=1399,
    function=0x7ffff7ba6d00 <rtl_uString_newFromSubString::__PRETTY_FUNCTION__> "void rtl_uString_newFromSubString(rtl_uString**, const rtl_uString*, sal_Int32, sal_Int32)")
    at assert.c:101
4  0x00007ffff7b6a28b in rtl_uString_newFromSubString (ppThis=0x7ffffffef1b0, pFrom=0x55555e122230, beginIndex=1, count=-2)
    at /home/julien/lo/libreoffice/sal/rtl/strtmpl.cxx:1399
5  0x00007fffa6e69136 in rtl::OUString::copy (this=0x7ffffffef1f8, beginIndex=1, count=-2) at /home/julien/lo/libreoffice/include/rtl/ustring.hxx:2223
6  0x00007fffa6fed67b in CuiAboutConfigTabPage::InsertEntry (this=0x55555bda0b20, pEntry=0x55555e13eb40)
    at /home/julien/lo/libreoffice/cui/source/options/optaboutconfig.cxx:874
7  0x00007fffa6fed415 in CuiAboutConfigTabPage::SearchHdl_Impl (this=0x55555bda0b20) at /home/julien/lo/libreoffice/cui/source/options/optaboutconfig.cxx:848

Change-Id: Id9d1003a0e5e52abb878229e710e3fd4612789a1